cleanup and festivals alpha

--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -1,21 +1,17 @@
-.ui.inverted.stackable.menu
+.ui.stackable.borderless.menu
     .ui.container
         a.header.icon.item(href='/' class="{{isActivePath '/'}}")
-            h1.facet_black F
-        a.item(href='/services' class="{{isActivePath '/services'}}") Services
-        // a.item(href='/team' class="{{isActivePath '/team'}}") Team
-        a.item(href='/events' class="{{isActivePath '/events'}}") Events
-        // a.item(href='/clients' class="{{isActivePath '/clients'}}") Events
-        a.item(href='/posts' class="{{isActivePath '/posts'}}") Blog
+            h1 JamsAt
+        a.item(href='/festivals' class="{{isActivePath '/festivals'}}") Festivals
         .right.menu 
             a.item(href='/admin/content' class="{{isActivePath '/admin/'}}")
                 i.configure.icon
                 | Admin
-            a.item(href='/messages' class="{{isActivePath '/messages'}}")
-                i.mail.icon
+            // a.item(href='/messages' class="{{isActivePath '/messages'}}")
+            //     i.mail.icon
             if currentUser
                 a.item(href="/account/profile/edit" class="{{isActivePath '/account/profile/edit'}}")
-                    if profile_doc.image_id
+                    if currentUser.image_id
                         img.ui.avatar.image(src="{{c.url currentUser.image_id width=50 height=50 gravity='face' crop='fill'}}")
                     else
                         i.user.icon
