--- a/components/footer/footer.jade
+++ b/components/footer/footer.jade
@@ -1,5 +1,5 @@
 template(name='footer')
-    .ui.basic.fluid.inverted.center.aligned.segment
+    .ui.basic.fluid.center.aligned.segment
         .ui.header
             i.copyright.icon
-            |Facet Enterprises 2017
+            |JamsAt 2017
