festival view page, dates on edit, featured on home

--- a/components/account/account.jade
+++ b/components/account/account.jade
@@ -21,7 +21,7 @@ template(name='account_nav')
             a.item(href='/account/favorites' class="{{isActivePath '/account/favorites'}}")
                 i.heart.icon
                 |Favorites
-            a.item(href='/account/clouds' class="{{isActivePath '/account/clouds'}}")
-                i.cloud.icon
-                |Clouds
+            // a.item(href='/account/clouds' class="{{isActivePath '/account/clouds'}}")
+            //     i.cloud.icon
+            //     |Clouds
                 
