--- a/components/home/client/home.jade
+++ b/components/home/client/home.jade
@@ -2,3 +2,8 @@ template(name='home')
     // +slider
     .ui.basic.center.aligned.segment
     .ui.text.container
+        +featured_festivals
+        
+        
+        
+        
