--- a/components/profile/client/edit_profile.tpl.jade
+++ b/components/profile/client/edit_profile.tpl.jade
@@ -1,7 +1,7 @@
 .ui.segment.text.container
     with person
         .ui.form
-            .field
+            .inline.field
                 if profile.image_id
                     label Image
                     .ui.centered.image
@@ -11,47 +11,38 @@
                 else
                     label Upload Image
                     input(type='file' name='upload_picture' accept='image/*')
-            // .field
+            // .inline.field
             //     if profile.google_image
             //         label Google Image
             //         img.ui.small.image(src=profile.google_image)
             //         #pick_google_image.ui.basic.button Make this Profile Image
-            .field
+            .inline.field
                 label Name
                 .ui.left.icon.input
                     i.user.icon
                     input#name(type='text' value=profile.name)
-            .field
-                label Company
-                .ui.left.icon.input
-                    i.building.icon
-                    input#company(type='text' value=profile.company)
-            .field
-                label Position
-                .ui.input
-                    input#position(type='text' value=profile.position)
-            .field
+            .inline.field
                 label Website
                 .ui.left.icon.input
                     i.linkify.icon
                     input#website(type='text' value=profile.website)
-            // .field
+            // .inline.field
             //     label Linkedin
             //     .ui.left.icon.input
             //         i.linkedin.icon
             //         input#linkedin(type='text' value=profile.linkedin)
-            // .field
+            // .inline.field
             //     label Twitter
             //     .ui.left.icon.input
             //         i.twitter.icon
             //         input#twitter(type='text' value=profile.twitter)
-            // .field
+            // .inline.field
             //     label Facebook
             //     .ui.left.icon.input
             //         i.facebook.icon
             //         input#facebook(type='text' value=profile.facebook)
-            .field
-                label Tags (anything to identify you with)
+            .inline.field
+                label Tags
                 each tags
                     .ui.basic.button.person_tag
                         i.minus.icon
@@ -59,10 +50,10 @@
                 .ui.left.icon.input
                     i.add.icon
                     input#add_tag(type='text' placeholder='Press enter after each one' maxlength='50')
-            .field
+            .inline.field
                 label Bio
                 textarea#bio(rows='5') #{bio}
-            .field
+            .inline.field
                 if published
                     #make_unpublished.ui.green.button
                         i.toggle.on.icon
@@ -72,12 +63,12 @@
                         i.toggle.off.icon
                         |Unpublished
             if is_my_profile
-                p Adding social accounts will create a service link in your profile and fill out any empty profile information.
+                p Adding social accounts will create a service link in your profile and fill out empty profile information.
                 .ui.eight.column.grid
                     .eight.wide.column
                         .ui.padded.basic.segment
                             +atForm
-            .field
+            .inline.field
                 #save_profile.ui.fluid.green.button 
                     // i.check.icon
                     |Save Profile
