--- a/components/home/home.jade
+++ b/components/home/home.jade
@@ -3,6 +3,7 @@ template(name='home')
     .ui.basic.center.aligned.segment
     .ui.text.container
         +featured_festivals
+        +featured_bands
         
         
         
