--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -3,6 +3,7 @@
         a.header.icon.item(href='/' class="{{isActivePath '/'}}")
             h1 JamsAt
         a.item(href='/festivals' class="{{isActivePath '/festivals'}}") Festivals
+        a.item(href='/bands' class="{{isActivePath '/bands'}}") Bands
         .right.menu 
             a.item(href='/admin/content' class="{{isActivePath '/admin/'}}")
                 i.configure.icon
